--- a/index.html
+++ b/index.html
@@ -727,17 +727,15 @@ s0.parentNode.insertBefore(s1,s0);
     <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
 </footer>
 
-    <!-- Scripts -->
-    <script src="common.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+
+    <script src="firebase-init.js"></script> <script src="common.js"></script>
     <script src="globalSettings.js"></script>
-    <script src="script.js"></script>
-    <script src="ai-features.js"></script>
-    <script src="settings.js"></script>
-    <script src="events.js"></script>
-    <script src="version.js"></script>
+    <script src="script.js"></script>      <script src="ai-features.js"></script>
+    <script src="settings.js"></script>    <script src="events.js"></script>      <script src="version.js"></script>
     <script src="device.js"></script>
-    <script src="creatorshoutouts.js"></script>
-    <script src="business-hours.js"></script>
-    <script src="admin.js"></script>
+    <script src="creatorshoutouts.js"></script> <script src="business-hours.js"></script> </body>
 </body>
 </html>                
