--- a/index.html
+++ b/index.html
@@ -97,20 +97,25 @@ s0.parentNode.insertBefore(s1,s0);
 
    <div class="profile-section">
     <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
+
     <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
 
     <div class="profile-pic-wrapper">
-        <img src="images/default-profile.jpg" alt="Profile Picture" class="profile-pic" id="profile-pic-main">
+        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+
         <div class="profile-status-container">
-             <span class="profile-status">⚪</span>
+            <span class="profile-status">🟢</span>
         </div>
     </div>
 
     <div class="username-checkmark">
-        <h1 id="profile-username-main">Loading...</h1>
-        <img src="check.png" alt="Verified" class="verified" id="profile-verified-check" style="display: none;">
+        <h1>Bus Army Dude</h1>
+        <img src="check.png" alt="Verified" class="verified">
     </div>
-    <p id="profile-bio-main" class="profile-bio">Loading bio...</p> <button class="weather-button" aria-label="Weather" onclick="window.location.href='weather.html'"></button>
+    <p>CURRENT PRESIDENT: Trump (2025-2029)</p>
+    <p>POLITICAL PARTY: Republican</p>
+
+    <button class="weather-button" aria-label="Weather" onclick="window.location.href='weather.html'"></button>
 </div>
         
        <!-- Social Links Section -->
@@ -727,15 +732,16 @@ s0.parentNode.insertBefore(s1,s0);
     <p>© <span id="year"></span> Bus Army Dude. All Rights Reserved.</p>
 </footer>
 
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-
-    <script src="firebase-init.js"></script> <script src="common.js"></script>
+    <!-- Scripts -->
+    <script src="common.js"></script>
     <script src="globalSettings.js"></script>
-    <script src="script.js"></script>      <script src="ai-features.js"></script>
-    <script src="settings.js"></script>    <script src="events.js"></script>      <script src="version.js"></script>
+    <script src="script.js"></script>
+    <script src="ai-features.js"></script>
+    <script src="settings.js"></script>
+    <script src="events.js"></script>
+    <script src="version.js"></script>
     <script src="device.js"></script>
-    <script src="creatorshoutouts.js"></script> <script src="business-hours.js"></script> </body>
+    <script src="creatorshoutouts.js"></script>
+    <script src="business-hours.js"></script>
 </body>
 </html>                
