--- a/admin.html
+++ b/admin.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Portal - Bus Army Dude</title>
     <link rel="stylesheet" href="admin.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Admin Portal</h1>
@@ -38,57 +40,73 @@
                 <h3>Creator Shoutouts</h3>
                 <p><small>Last Updated timestamps are managed automatically when adding/deleting shoutouts.</small></p>
 
-                <h4>TikTok</h4>
-                <div class="list-container-admin" id="shoutouts-tiktok-list-admin"><p>Loading TikTok shoutouts...</p></div>
-                <form id="add-shoutout-tiktok-form" class="add-form">
-                    <h5>Add/Update TikTok Shoutout</h5>
-                    <input type="hidden" id="tiktok-id">
-                    <input type="text" id="tiktok-username" placeholder="Username" required>
-                    <input type="text" id="tiktok-nickname" placeholder="Nickname" required>
-                    <input type="text" id="tiktok-followers" placeholder="Followers (e.g., 1.2M)" required>
-                    <textarea id="tiktok-bio" placeholder="Bio"></textarea>
-                    <input type="text" id="tiktok-profilePic" placeholder="Image Path (e.g., images/name.jpg)" required>
-                    <label><input type="checkbox" id="tiktok-isVerified"> Verified?</label>
-                    <label for="tiktok-order">Display Order:</label>
-                    <input type="number" id="tiktok-order" placeholder="1" required min="1">
-                    <button type="submit">Add/Update TikTok Shoutout</button>
-                    <button type="button" id="delete-tiktok-button" class="secondary-button">Delete TikTok Shoutout</button>
-                </form>
+                <div class="shoutouts-platform-container">
+                    <h4>TikTok</h4>
+                    <div class="list-container-admin" id="shoutouts-tiktok-list-admin">
+                        <p>Loading TikTok shoutouts...</p>
+                    </div>
+                    <form id="add-shoutout-tiktok-form" class="add-form">
+                        <h5>Add/Update TikTok Shoutout</h5>
+                        <input type="hidden" id="tiktok-id">
+                        <input type="text" id="tiktok-username" placeholder="Username" required>
+                        <input type="text" id="tiktok-nickname" placeholder="Nickname" required>
+                        <input type="text" id="tiktok-followers" placeholder="Followers (e.g., 1.2M)" required>
+                        <textarea id="tiktok-bio" placeholder="Bio"></textarea>
+                        <input type="text" id="tiktok-profilePic" placeholder="Image Path (e.g., images/name.jpg)"
+                            required>
+                        <label><input type="checkbox" id="tiktok-isVerified"> Verified?</label>
+                        <label for="tiktok-order">Display Order:</label>
+                        <input type="number" id="tiktok-order" placeholder="1" required min="1">
+                        <button type="submit">Add/Update TikTok Shoutout</button>
+                        <button type="button" id="delete-tiktok-button" class="secondary-button">Delete TikTok Shoutout</button>
+                    </form>
+                </div>
 
-                <h4>Instagram</h4>
-                <div class="list-container-admin" id="shoutouts-instagram-list-admin"><p>Loading Instagram shoutouts...</p></div>
-                <form id="add-shoutout-instagram-form" class="add-form">
-                    <h5>Add/Update Instagram Shoutout</h5>
-                    <input type="hidden" id="instagram-id">
-                    <input type="text" id="instagram-username" placeholder="Username" required>
-                    <input type="text" id="instagram-nickname" placeholder="Nickname" required>
-                    <input type="text" id="instagram-followers" placeholder="Followers (e.g., 500K)" required>
-                    <textarea id="instagram-bio" placeholder="Bio"></textarea>
-                    <input type="text" id="instagram-profilePic" placeholder="Image Path (e.g., instagram_photos/name.jpg)" required>
-                    <label><input type="checkbox" id="instagram-isVerified"> Verified?</label>
-                    <label for="instagram-order">Display Order:</label>
-                    <input type="number" id="instagram-order" placeholder="1" required min="1">
-                    <button type="submit">Add/Update Instagram Shoutout</button>
-                    <button type="button" id="delete-instagram-button" class="secondary-button">Delete Instagram Shoutout</button>
-                </form>
+                <div class="shoutouts-platform-container">
+                    <h4>Instagram</h4>
+                    <div class="list-container-admin" id="shoutouts-instagram-list-admin">
+                        <p>Loading Instagram shoutouts...</p>
+                    </div>
+                    <form id="add-shoutout-instagram-form" class="add-form">
+                        <h5>Add/Update Instagram Shoutout</h5>
+                        <input type="hidden" id="instagram-id">
+                        <input type="text" id="instagram-username" placeholder="Username" required>
+                        <input type="text" id="instagram-nickname" placeholder="Nickname" required>
+                        <input type="text" id="instagram-followers" placeholder="Followers (e.g., 500K)" required>
+                        <textarea id="instagram-bio" placeholder="Bio"></textarea>
+                        <input type="text" id="instagram-profilePic"
+                            placeholder="Image Path (e.g., instagram_photos/name.jpg)" required>
+                        <label><input type="checkbox" id="instagram-isVerified"> Verified?</label>
+                        <label for="instagram-order">Display Order:</label>
+                        <input type="number" id="instagram-order" placeholder="1" required min="1">
+                        <button type="submit">Add/Update Instagram Shoutout</button>
+                        <button type="button" id="delete-instagram-button" class="secondary-button">Delete Instagram
+                            Shoutout</button>
+                    </form>
+                </div>
 
-                <h4>YouTube</h4>
-                <div class="list-container-admin" id="shoutouts-youtube-list-admin"><p>Loading YouTube shoutouts...</p></div>
-                <form id="add-shoutout-youtube-form" class="add-form">
-                    <h5>Add/Update YouTube Shoutout</h5>
-                    <input type="hidden" id="youtube-id">
-                    <input type="text" id="youtube-username" placeholder="@handle or Channel ID" required>
-                    <input type="text" id="youtube-nickname" placeholder="Channel Name" required>
-                    <input type="text" id="youtube-subscribers" placeholder="Subscribers (e.g., 100K)" required>
-                    <textarea id="youtube-bio" placeholder="Bio"></textarea>
-                    <input type="text" id="youtube-profilePic" placeholder="Profile Pic Path" required>
-                    <input type="text" id="youtube-coverPhoto" placeholder="Cover Photo Path (optional)">
-                    <label><input type="checkbox" id="youtube-isVerified"> Verified?</label>
-                    <label for="youtube-order">Display Order:</label>
-                    <input type="number" id="youtube-order" placeholder="1" required min="1">
-                    <button type="submit">Add/Update YouTube Shoutout</button>
-                    <button type="button" id="delete-youtube-button" class="secondary-button">Delete YouTube Shoutout</button>
-                </form>
+                <div class="shoutouts-platform-container">
+                    <h4>YouTube</h4>
+                    <div class="list-container-admin" id="shoutouts-youtube-list-admin">
+                        <p>Loading YouTube shoutouts...</p>
+                    </div>
+                    <form id="add-shoutout-youtube-form" class="add-form">
+                        <h5>Add/Update YouTube Shoutout</h5>
+                        <input type="hidden" id="youtube-id">
+                        <input type="text" id="youtube-username" placeholder="@handle or Channel ID" required>
+                        <input type="text" id="youtube-nickname" placeholder="Channel Name" required>
+                        <input type="text" id="youtube-subscribers" placeholder="Subscribers (e.g., 100K)" required>
+                        <textarea id="youtube-bio" placeholder="Bio"></textarea>
+                        <input type="text" id="youtube-profilePic" placeholder="Profile Pic Path" required>
+                        <input type="text" id="youtube-coverPhoto" placeholder="Cover Photo Path (optional)">
+                        <label><input type="checkbox" id="youtube-isVerified"> Verified?</label>
+                        <label for="youtube-order">Display Order:</label>
+                        <input type="number" id="youtube-order" placeholder="1" required min="1">
+                        <button type="submit">Add/Update YouTube Shoutout</button>
+                        <button type="button" id="delete-youtube-button" class="secondary-button">Delete YouTube
+                            Shoutout</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -97,4 +115,5 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
     <script src="admin.js"></script>
 </body>
+
 </html>
