--- a/index.html
+++ b/index.html
@@ -743,5 +743,9 @@ s0.parentNode.insertBefore(s1,s0);
     <script src="device.js"></script>
     <script src="creatorshoutouts.js"></script>
     <script src="business-hours.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>                
