--- a/admin.html
+++ b/admin.html
@@ -113,7 +113,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-    <script src="admin.js"></script>
+    <script src="admin.js" type="module"></script>
 </body>
 
 </html>
