--- a/index.html
+++ b/index.html
@@ -95,23 +95,24 @@ s0.parentNode.insertBefore(s1,s0);
     <p><strong>Thank you for your understanding!</strong></p>
 </div>
 
-   <div class="profile-section">
+  <div class="profile-section">
     <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
-
     <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
 
     <div class="profile-pic-wrapper">
-        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="path/to/default-profile.jpg" alt="Profile Picture"
+             class="profile-pic"
+             id="profile-pic-main">
 
         <div class="profile-status-container">
-            <span class="profile-status">🟢</span>
-        </div>
+            <span class="profile-status" id="profile-status-main"></span> </div>
     </div>
 
     <div class="username-checkmark">
-        <h1>Bus Army Dude</h1>
-        <img src="check.png" alt="Verified" class="verified">
-    </div>
+        <h1 id="profile-username-main">Username</h1> <img src="check.png" alt="Verified" class="verified"> </div>
+
+    <p class="profile-bio" id="profile-bio-main">Loading bio...</p>
+
     <p>CURRENT PRESIDENT: Trump (2025-2029)</p>
     <p>POLITICAL PARTY: Republican</p>
 
