--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel - Creator Shoutouts</title>
+    <title>Admin Panel - Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="admin.css">
     </head>
 <body class="dark-mode">
